<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/title_input_data"
            android:textSize="21sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layoutFieldInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextKode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_background_white"
                android:hint="@string/dump_kode_barang"
                android:padding="16dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_background_white"
                android:hint="@string/dump_nama_barang"
                android:padding="16dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_background_white"
                android:hint="@string/dump_harga_barang"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutFieldButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutFieldInput"
            android:padding="16dp">

            <Button
                android:id="@+id/buttonInput"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:background="@drawable/rounded_background_green"
                android:text="@string/btn_input"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/buttonView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_background_blue"
                android:text="@string/btn_view"
                android:textColor="@color/colorWhite" />

        </RelativeLayout>

    </RelativeLayout>


</ScrollView>