<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewKode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/dump_kode_barang"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewKode"
            android:layout_marginTop="5dp"
            android:text="@string/dump_nama_barang"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewNama"
            android:layout_marginTop="5dp"
            android:text="@string/dump_harga_barang"
            android:textSize="16sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>